deploy-files/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tl-propscope-microservice-dev-svc
  namespace: default
  labels:
    app: tl-propscope-microservice-dev-svc
  # annotations:
  #   service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
  #   service.beta.kubernetes.io/do-loadbalancer-certificate-id: "7256273d-5088-482a-a51a-0f2eefc8f862"
  #   service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
  #   service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  ports:
    # - port: 8012
    #   targetPort: 8012
    #   protocol: TCP
    #   name: http
    - port: 50051
      targetPort: 50051
      protocol: TCP
      name: grpc-main
    - port: 50052
      targetPort: 50052
      protocol: TCP
      name: grpc-alt
    # - port: 443
    #   targetPort: 8000
    #   protocol: TCP
    #   name: https
  selector:
    app: tl-propscope-microservice-dev
    version: v1
  # type: LoadBalancer
