deploy-files/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tl-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   tls:
    #     mode: SIMPLE
    #     credentialName: 7256273d-5088-482a-a51a-0f2eefc8f862
    #   hosts:
    #     - "tlands.com"
